# CL4P-TP

./: .gitignore  LICENSE  README.md
SensorSlave/: Adafruit_MPU6050.cpp  Adafruit_MPU6050.h  SensorSlave.ino
host_example/: CMakeLists.txt
host_example/src/: simple_test.c
simulation/: DynamicsEquation.ipynb  README.md  claptrap.py  log_loader.py  log_plot  requirements.txt  setup.py  simulation.py
simulation/doc/: ControlDocumentation.tex
simulation/scenarios/: example_pd.py  sagittal_gain_tuning.py  sagittal_pd.py  simulation.py  simulation_with_analytical_validation.py
simulation/src/claptrap_simu/: __init__.py
simulation/src/claptrap_simu/core/: claptrap.py  sagittal_dynamics.py
simulation/src/claptrap_simu/data/: body.FCStd  body.dae  claptrap.urdf  wheel.FCStd  wheel.dae
simulation/src/claptrap_simu/log_handling/: log_loader.py  logger.py  plotter.py  viewer3D.py
simulation/unit/: validate_against_2D_equations.py  validate_against_analytical_equations.py
simulation/urdf/: claptrap.urdf
